@@ -2344,6 +2344,9 @@ UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=40394;
 -- Charred Wreckage (Quest: Clean Up (Id: 12818))
 UPDATE `item_template` SET `Flags`=67584 WHERE `entry`=40603;
 
+-- Onslaught Intel Documents (Quest: Intelligence Gathering (Id: 12838))
+UPDATE `item_template` SET `Flags`=2048 WHERE `entry`=40640;
+
 -- Dried Gnoll Rations (Quest: Reclaimed Rations (Id: 12827))
 UPDATE `item_template` SET `Flags`=67584 WHERE `entry`=40645;
 
